# vue-fastapi

./: pyproject.toml
backend/: config.py
backend/routers/: task.py  user.py
frontend/: package-lock.json  vite.config.js
